--- a/.github/workflows/cordova-android-build.yml
+++ b/.github/workflows/cordova-android-build.yml
@@ -2,35 +2,35 @@ name: Build Cordova Android APK
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
+      - name: Checkout Code
+        uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: 16
 
       - name: Install Cordova
         run: npm install -g cordova
 
       - name: Create Cordova project
         run: |
-          cordova create apkbuilder com.yourdomain.game "ShadowOfSecondMoon"
-          cd apkbuilder
+          cordova create myApp com.example.app ShadowOfTheSecondMoon
+          cd myApp
           cordova platform add android
           rm -rf www
           cp -r ../www .
-          cordova build android --no-interactive
+          cordova build android
 
       - name: Upload APK
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: android-apk
-          path: apkbuilder/platforms/android/app/build/outputs/apk/debug/app-debug.apk
+          path: myApp/platforms/android/app/build/outputs/apk/debug/app-debug.apk
