--- a/.github/workflows/cordova-android-build.yml
+++ b/.github/workflows/cordova-android-build.yml
@@ -1,36 +1,37 @@
-name: Build Cordova Android APK
+name: Build Android APK
 
 on:
   push:
-    branches: [main]
+    branches: [ main ]
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
+      - name: Checkout Repo
+        uses: actions/checkout@v3
 
       - name: Set up Node.js
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: '18'
 
       - name: Install Cordova
         run: npm install -g cordova
 
-      - name: Create Cordova project
+      - name: Create Cordova Project
         run: |
           cordova create myApp com.example.app ShadowOfTheSecondMoon
           cd myApp
           cordova platform add android
-          rm -rf www
-          cp -r ../www .
+          mkdir -p www
+          cp -r ../index.html ../js ../img ../audio ../fonts ../css ./www || true
           cordova build android
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
-          name: android-apk
+          name: ShadowOfTheSecondMoon-APK
           path: myApp/platforms/android/app/build/outputs/apk/debug/app-debug.apk
