--- a/.github/workflows/cordova-android-build.yml
+++ b/.github/workflows/cordova-android-build.yml
@@ -1,19 +1,19 @@
-name: Build Android APK
+name: Build Cordova Android APK
 
 on:
   push:
-    branches: [ main ]
-  workflow_dispatch:
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Repo
+      - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: Set up Node.js
+      - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '18'
@@ -21,17 +21,28 @@ jobs:
       - name: Install Cordova
         run: npm install -g cordova
 
-      - name: Create Cordova Project
+      - name: Create Cordova project
         run: |
-          cordova create myApp com.example.app ShadowOfTheSecondMoon
+          cordova create myApp com.example.app "Shadow Of The Second Moon"
           cd myApp
           cordova platform add android
-          mkdir -p www
-          cp -r ../index.html ../js ../img ../audio ../fonts ../css ./www || true
-          cordova build android
+
+      - name: Copy game files into www folder
+        run: |
+          shopt -s extglob
+          cp -r !(myApp|.git|node_modules|.github) myApp/www/
+
+      - name: Add custom icon
+        run: |
+          cp icon.png myApp/res/icon/android/icon-192.png
+
+      - name: Build APK
+        run: |
+          cd myApp
+          cordova build android --release
 
       - name: Upload APK
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v3
         with:
           name: ShadowOfTheSecondMoon-APK
-          path: myApp/platforms/android/app/build/outputs/apk/debug/app-debug.apk
+          path: myApp/platforms/android/app/build/outputs/apk/release/app-release.apk
