--- a/.github/workflows/cordova-android-build.yml
+++ b/.github/workflows/cordova-android-build.yml
@@ -10,8 +10,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
@@ -24,27 +24,20 @@ jobs:
       - name: Create Cordova project
         run: cordova create myApp com.example.shadowmoon "Shadow Of The Second Moon"
 
-      - name: Copy game files to www
-        run: cp -r * myApp/www || true
-
-      - name: Add Android platform
+      - name: Copy game files and config.xml
         run: |
-          cd myApp
-          cordova platform add android
+          cp -r * myApp/www || true
+          cp config.xml myApp/config.xml
+          cp icon.png myApp/icon.png
 
-      - name: Create icon folder
-        run: mkdir -p myApp/res/icon/android
+      - name: Change to project directory
+        run: cd myApp && cordova platform add android
 
-      - name: Copy custom icon
-        run: cp icon.png myApp/res/icon/android/icon-192.png
-
-      - name: Build APK
-        run: |
-          cd myApp
-          cordova build android
+      - name: Build Android APK
+        run: cd myApp && cordova build android
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
-          name: ShadowOfTheSecondMoon-APK
+          name: Shadow-Of-The-Second-Moon-APK
           path: myApp/platforms/android/app/build/outputs/apk/debug/app-debug.apk
